tests/NormalTests/paczka1/fuzzy1/63766048.err
Error in line 2: iFLVBC3vkH S525 90,0
Error in line 34: h5EauuAD5x 5656 43,8
Error in line 35: YMhrA5187,3
Error in line 37: F9mv2gBO A51 49,6
